[project]
name = "diffusion-renderer"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "torch==2.4.1+cu121",
    "torchaudio==2.4.1+cu121",
    "ninja",
    "opencv-python",
    "tensorboardX",
    "tqdm",
    "matplotlib",
    "scipy",
    "einops",
    "braceexpand",
    "imageio",
    "imageio-ffmpeg",
    "omegaconf",
    "ffmpegcv",
    "mediapy",
    "OpenEXR",
    "pillow>=10.3.0",
    "diffusers==0.32.0",
    "huggingface_hub==0.25.0",
    "accelerate==1.3.0",
    "transformers==4.47.1",
    "peft==0.7.0",
    "datasets==2.19.0",
    "nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast.git",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchaudio = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
